--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,7 @@ main article li {
     transform: translateY(-100%);
     transition: transform 0.3s ease;
     padding-top: 1rem;
+    font-size: 0.875rem;
   }
 
   nav#sidebar.open {
