--- a/styles.css
+++ b/styles.css
@@ -214,8 +214,9 @@ main article li {
   }
 
   main article {
-    background: var(--article); /* visible background */
-    padding: 1rem;
+    background: transparent; /* visible background */
+    padding: 0.5rem;
+    margin-bottom: 5rem;
     font-size: 0.9rem;
     border-radius: 0.6rem;
   }
