--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ header .logo i {
 /* Hamburger button (only visible on mobile) */
 #hamburger {
   font-size: 1.8rem;
+  margin-right:4px;
   background: none;
   border: none;
   color: var(--text);
@@ -87,7 +88,7 @@ header .logo i {
 nav#sidebar {
   width: 260px;
   background-color: var(--menu);
-  padding-top: 70px; /* leave space for header */
+  padding-top: 80px; /* leave space for header */
   padding-left: 20px;
   padding-right: 20px;
   flex-shrink: 0;
@@ -135,7 +136,7 @@ nav#sidebar ul li a.active {
 main {
   flex: 1 1 auto; /* fills remaining space under header */
   margin-left: 260px;
-  margin-top: 58px; /* header height */
+  margin-top: 66px; /* header height */
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   padding: 0;
@@ -227,7 +228,7 @@ header .logo i {
     height: calc(100% - 60px);
     transform: translateY(-100%);
     transition: transform 0.3s ease;
-    padding-top: 1rem;
+    padding-top: 20px;
     font-size: 0.9rem;
     background-color: var(--menu); /* visible */
     z-index: 1100; /* above main content */
