--- a/styles.css
+++ b/styles.css
@@ -243,8 +243,11 @@ main article li {
     padding: 0.8rem 1rem;
   }
 
-  /* Keep hover disabled except for active item */
-/* Keep hover disabled for non-active items on mobile */
+nav#sidebar ul li a {
+  -webkit-tap-highlight-color: transparent; /* iOS & Android Chrome */
+}
+
+/* Keep hover disabled except for active item */
 nav#sidebar ul li a:not(.active):hover {
   background-color: var(--bg);
   color: var(--accent);
@@ -257,7 +260,6 @@ nav#sidebar ul li a:active {
   background-color: var(--hover);
   color: var(--text);
 }
-
 
   main article {
     background: transparent;
@@ -285,4 +287,3 @@ nav#sidebar ul li a:active {
     flex-shrink: 0 !important;
   }
 }
-file:///C:/Users/Brad/Desktop/New%20folder/silverstein.html
