--- a/styles.css
+++ b/styles.css
@@ -214,12 +214,12 @@ article img.full-width-image {
   display: block;
   width: 100%;
   height: auto;          /* Keeps the image’s aspect ratio */
-  border-radius: 0rem; /* Optional: matches your rounded style */
+  border-radius: 1rem; /* Optional: matches your rounded style */
    border: 0px solid rgba(255, 255, 255, 0.15);
   padding:0px;
   background-color: var(--menu);
-  margin-top:2rem;
-  margin-bottom:3rem;/* Adds spacing above and below */
+  margin-top:1.5rem;
+  margin-bottom:2rem;/* Adds spacing above and below */
 }
 
 /* ---------- Mobile Styles ---------- */
@@ -296,6 +296,7 @@ nav#sidebar ul li a.tap-active {
     margin-bottom: 0;
     font-size: 0.9rem;
     border-radius: 0.6rem;
+    max-width: 100%;
   }
 
   main article h2 {
